--- a/sass/function.sass
+++ b/sass/function.sass
@@ -10,15 +10,21 @@
 
     /*********** Desktop ***********/
     @media only screen and (min-width: 1024px)
-      display: flex
       flex-direction: row
       justify-content: center
+      margin: 0 auto
+      max-width: 1024px
 
   &__card
     display: flex
     justify-content: center
     margin-left: 30px
     margin-right: 20px
+
+    /*********** Desktop ***********/
+    @media only screen and (min-width: 1024px)
+      margin-left: 15px
+      margin-right: 0
 
     &__content
       height: 75px
