--- a/sass/restaurantHome.sass
+++ b/sass/restaurantHome.sass
@@ -4,7 +4,7 @@
   display: flex
   flex-direction: column
   gap: 20px
-  padding: 50px 0 65px 0
+  padding: 50px 0 70px 0
 
   /****** Cards ***********/
   &__groupCard
